<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_events" />
        <item
            android:id="@+id/nav_marks"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_marks" />
        <item
            android:id="@+id/nav_tracks"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_tracks" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_menu_share"
                android:title="My Friend" />
            <item
                android:id="@+id/nav_message"
                android:icon="@drawable/ic_menu_send"
                android:title="My message" />
        </menu>
    </item>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="Logout" />
        </menu>
    </item>

</menu>
