<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.rose_hulman.weih.forsport.DetailOtheruserFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/com_image_view"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/name_text_view"
            android:padding="8dp"
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_below="@+id/com_image_view"
            android:gravity="left"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="4dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/loc_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginLeft="12dp"
            android:gravity="left"
            android:layout_below="@+id/name_text_view"
            android:text="locationbrabrabra" />

        <TextView
            android:id="@+id/phone_text_view"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loc_text_view"
            android:layout_marginLeft="12sp"
            android:text="+(86)12312341234"
            android:gravity="left"/>

        <TextView
            android:id="@+id/email_text_view"
            android:layout_below="@+id/loc_text_view"
            android:layout_toRightOf="@+id/phone_text_view"
            android:layout_marginLeft="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="12sp"
            android:text="@string/Male"
            android:gravity="center"/>

        <TextView
            android:id="@+id/des_text_view"
            android:layout_marginRight="12sp"
            android:layout_marginLeft="12sp"
            android:layout_below="@+id/phone_text_view"
            android:layout_width="match_parent"
            android:text=""
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/mark_button"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_below="@+id/com_image_view"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/Mark" />

        <Button
            android:id="@+id/seg_button"
            android:layout_width="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12sp"
            android:layout_below="@+id/des_text_view"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/schedule_a_game_with_him_her" />

        <Button
            android:id="@+id/get_button"
            android:layout_width="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12sp"
            android:layout_below="@+id/seg_button"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/get_his_her_trainning" />

    </RelativeLayout>
</FrameLayout>
